<resources>
    <string name="app_name">Meet my pets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="none" />
    <string name="colortextview">#13A698</string>
    <string name="home">Home</string>
    <string name="meetings">Meetings</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="message_cant_be_empty">Message can\'t be empty</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="password_is_empty">Password cant be empty</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="password_recovery_email_sent">Password recovery Email sent</string>
    <string name="no_such_user_please_register">No such user, please register</string>
    <string name="wrong_code_entered">Wrong Code Entered</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login">Login</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="password_not_equal">Password not equal</string>
    <string name="already_registerd_wrong_code">Already registered but wrong code entered</string>
    <string name="pet_name">Pet name</string>

</resources>